--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.2.7.RELEASE</version>
+		<version>1.4.3.RELEASE</version>
 	</parent>
 	<artifactId>God3141</artifactId>
 	<packaging>war</packaging>
@@ -13,7 +13,7 @@
 	<properties>
 		<main.basedir>${basedir}/../..</main.basedir>
 		<m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
-		<java.version>1.7</java.version>
+		<java.version>1.8</java.version>
 		<tomcat.version>7.0.59</tomcat.version>
 	</properties>
 	<dependencies>
@@ -42,6 +42,12 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.46</version>
+		</dependency>
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-all</artifactId>
+		    <version>1.8.4</version>
+		    <scope>test</scope>
 		</dependency>
 
 
